# Fight_Detection_From_Surveillance_Cameras-PyTorch_Project

./: Fight_utils.py  LICENSE  README.md  infer.py  requirements.txt  setup.py  utils.py  utilsPred.py
FDSC/utils/: Fight_utils.py
Fight_Detection_Pip_Package/: LICENCE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
Fight_Detection_Pip_Package/Fight_Detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Fight_Detection_Pip_Package/fight_detection/: Fight_utils.py
NoteBooks/: Fight_Detection_NoteBook_Final.ipynb
dataset/: videos.txt
