[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "albumentations>=1.1.0",
    "ipython>=7.30.1",
    "moviepy>=1.0.3",
    "gdown",
    "numpy>=1.19.5",
    "opencv_python>=4.5.2.54",
    "pandas>=1.3.1",
    "protobuf>=3.19.1",
    "pytube>=11.0.2",
    "pafy>=0.5.5",
    "youtube_dl",
    "pytube3>=9.6.4",
    "torch>=1.10.1",
    "torchvision>=0.11.2"
]
build-backend = "setuptools.build_meta"