[metadata]
name = Fight Detection
version = 0.0.8
author = The Innovators
author_email = mohamedsebaie1@gmail.com
description = Detect Fight From Surveillance Cameras and Video Streams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MohamedSebaie/Fight_Detection_From_Surveillance_Cameras-PyTorch_Project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True